# um

./: Cargo.toml  README.md  deny.toml  sandmark.sh
.github/workflows/: continuous-integration.yaml
files/: cat.asm  hello-world.asm
src/: asm.rs  conv.rs  lib.rs  main.rs  ops.rs  reg.rs  str.rs
src/asm/: lexer.rs  parse.rs
