[package]
name = "um"
version = "0.1.0"
edition = "2021"
authors = ["tjh <14987462+thomhayward@users.noreply.github.com>"]
license = "GPL-3.0-only"
default-run = "um"
rust-version = "1.74.1"

[dependencies]
smallvec = { version = "1.13.2" }
logos = { version = "0.14.2" }

[features]
default = []

[profile.release]
lto = "fat"
codegen-units = 1
